RESOLVED FIXED21851
REGRESSION (r36513): Crash when removing a widget with percent height
https://bugs.webkit.org/show_bug.cgi?id=21851
Summary REGRESSION (r36513): Crash when removing a widget with percent height
mitz
Reported 2008-10-23 22:48:04 PDT
The attached test case crashes TOT. Patch forthcoming.
Attachments
Keep RenderWidget::destroy() in sync with RenderBox::destroy() after r36513 (29.88 KB, patch)
2008-10-23 22:54 PDT, mitz
sam: review+
mitz
Comment 1 2008-10-23 22:48:21 PDT
mitz
Comment 2 2008-10-23 22:54:20 PDT
Created attachment 24635 [details] Keep RenderWidget::destroy() in sync with RenderBox::destroy() after r36513
mitz
Comment 3 2008-10-24 12:12:05 PDT
Note You need to log in before you can comment on or make changes to this bug.