WebCore:

Reviewed by Sam Weinig.

        - fix https://bugs.webkit.org/show_bug.cgi?id=21851
          <rdar://problem/6304151> REGRESSION (r36513): Crash when removing a widget with percent height

        Test: fast/replaced/percent-height-in-anonymous-block-widget.html

        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::destroy): Copied code added to
        RenderBox::destroy() in r36513 into this function.

LayoutTests:

        Reviewed by Sam Weinig.

        - test for https://bugs.webkit.org/show_bug.cgi?id=21851
          <rdar://problem/6304151> REGRESSION (r36513): Crash when removing a widget with percent height

        * fast/replaced/percent-height-in-anonymous-block-widget.html: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.checksum: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.png: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@37849 bbb929c8-8fbe-4397-9dbb-9b2b20218538